changed  little bit the styling of the expand/collapse of the scroll bar icon; currently the icon does not slide down/up need to fix that later

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -184,11 +184,11 @@ html, body, #map-canvas {
 
 #expand-collapse-scroll-bar{
 	width: auto;
-	/*position: inherit; */
+	position: inherit; 
 	/*float: left;*/
 	/*bottom: 23%;*/
 	z-index: 3;
-	left: 0.9%;
+	left: 1.2%;
 
 }
 
